update home page padding
update padding so blueit logo shows well

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 		<div class="main-container">
 		<a id="home" class="in-page-link"></a>
 			
-			<section class="image-edge bg-dark">
+			<section class="image-edge bg-dark image-padding">
 		        <div class="col-md-6 col-sm-4 p0">
 		            <img alt="BlueiT Logo" class="mb-xs-24" src="img/LogoVector_NoShadow.png">
 		        </div>
