--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 		                    </p>
 		                </div>
 		                <div class="col-sm-6 col-md-5 col-md-offset-1">
-		                    <form class="form-email" data-success="Thanks for your submission, we will be in touch shortly." data-error="Please fill all fields correctly.">
+		                    <form action="https://formspree.io/felix.abreu@blueit.cc" method="POST" >
 		                        <input type="text" class="validate-required" name="name" placeholder="Your Name">
 		                        <input type="text" class="validate-required validate-email" name="email" placeholder="Email Address">
 		                        <textarea class="validate-required" name="message" rows="4" placeholder="Message"></textarea>
