Update Client list and order

--- a/index.html
+++ b/index.html
@@ -129,38 +129,45 @@
 		            <div class="logo-carousel">
 		                <ul class="slides">
 		                    <li>
-		                        <a href="https://www.instagram.com/simplynativecbd/" target="_blank">
-		                            <img alt="Simply Native CBD" src="img/SimplyNative.png">
-		                        </a>
-		                    </li>
+								<a href="https://www.instagram.com/millenivision/" target="_blank">
+									<img alt="MilleniVision Networks" src="img/MilleniVision.png">
+								</a>
+							</li>
+							<li>
+								<a href="https://www.unipantry.net" target="_blank">
+									<img alt="UniPantry" src="img/UniPantry Logo.png">
+								</a>
+									
+							</li>
+							<li>
+									<a href="https://sofit.us" target="_blank">
+										<img alt="SoFit" src="img/SoFit_Logotype_extrasmall.png">
+									</a>
+							</li>
+							<li>
+									<a href="https://richmusicltd.com/" target="_blank">
+										<img alt="Rich Music" src="img/crown_orange.png">
+									</a>
+							</li>
 		                    <li>
 		                        <a href="https://www.instagram.com/cinemaentinc/" target="_blank">
 		                            <img alt="Cinema Ent" src="img/logo.png">
 		                        </a>
-		                    </li>
-		                    <li>
-		                        <a href="https://sofit.us" target="_blank">
-		                            <img alt="SoFit" src="img/SoFit_Logotype_extrasmall.png">
-		                        </a>
-		                    </li>
+							</li>
 		                    <li>
 		                        <a href="https://www.instagram.com/elguayaquilenorestaurant/" target="_blank">
 		                            <img alt="Guayaquileno" src="img/Guayaquileno.png">
 		                        </a>
 		                    </li>
-		                    <li>
-								<a href="https://richmusicltd.com/" target="_blank">
-		                            <img alt="Rich Music" src="img/crown_orange.png">
-		                        </a>
-		                    </li>
+
 		                    <li>
 		                        <a href="https://www.nycompanyregistry.com/companies/pimentel-nicho-pllc/" target="_blank">
 		                            <img alt="Pimentel and Nicho" src="img/Amauta_Logo.png">
 		                        </a>
 							</li>
 							<li>
-							<a href="https://www.instagram.com/millenivision/" target="_blank">
-									<img alt="MilleniVision Networks" src="img/MilleniVision.png">
+								<a href="https://www.instagram.com/simplynativecbd/" target="_blank">
+									<img alt="Simply Native CBD" src="img/SimplyNative.png">
 								</a>
 							</li>
 		                </ul>
