Update form for contacting and layout for email and phone number

--- a/index.html
+++ b/index.html
@@ -235,15 +235,15 @@
 		                <div class="col-sm-6 col-md-5">
 		                    <h4 class="uppercase">Let's Talk</h4>
 		                    <p>
-		                    Interested in discussing how we can help bring you business to the next level? Looking for a mentor as you embark on your journey into the tech industry? Feel free to fill out the form on the right or reach out by using the contact information below!
+		                    Interested in discussing how we can help bring you business to the next level? Looking for a mentor as you embark on your journey into the tech industry? Give us a call or send us a message so we can start your free consultation!
 		                    </p>
 		                    <hr>
 		                    <p>
 		                        <strong>E:</strong> felix.abreu@blueit.cc
-		                        <br> <br>
-		                        <strong>P:</strong> (347) 768-9349
-		                        <br>
 		                    </p>
+				    <p>
+					<strong>P:</strong> (347) 768-9349 
+				    </p>
 		                </div>
 		                <div class="col-sm-6 col-md-5 col-md-offset-1">
 		                    <form action="https://formspree.io/felix.abreu@blueit.cc" method="POST" >
