--- a/index.html
+++ b/index.html
@@ -235,8 +235,11 @@
 		                <div class="col-sm-6 col-md-5">
 		                    <h4 class="uppercase">Let's Talk</h4>
 		                    <p>
-		                    Interested in discussing how we can help bring you business to the next level? Looking for a mentor as you embark on your journey into the tech industry? <br><br><strong class="big-text">Give us a call or send us a message so we can start your free consultation!</strong>
+		                    Interested in discussing how we can help bring you business to the next level? Looking for a mentor as you embark on your journey into the tech industry?
 		                    </p>
+				    <p>
+					    <strong class="big-text">Give us a call or send us a message so we can start your free consultation!</strong>
+				    </p>
 		                    <hr>
 		                    <p>
 		                        <strong>E:</strong> felix.abreu@blueit.cc
