add consultation request (purchase of a product) event

--- a/index.html
+++ b/index.html
@@ -325,7 +325,12 @@
 				</div>
 			</footer></div>
 		
-				
+	<script>
+	  fbq('track', 'CompleteRegistration', {
+	    value: Consultation,
+	    currency: 'USD',
+	  });
+	</script>			
 	<script src="js/jquery.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
         <script src="js/flexslider.min.js"></script>
