--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 		  'https://connect.facebook.net/en_US/fbevents.js');
 		  fbq('init', '700941583717950');
 		  fbq('track', 'PageView');
+		  fbq('track', 'Contact');
 		</script>
 		<noscript><img height="1" width="1" style="display:none"
 		  src="https://www.facebook.com/tr?id=700941583717950&ev=PageView&noscript=1"
