Update centering of overlay logo

--- a/spotify/index.html
+++ b/spotify/index.html
@@ -65,7 +65,7 @@
 
 
 		<div class='body' id="main-overlay">
-				<img class="logo fading" alt="CallMeWicked Logo" id="over-logo" style="padding-left: 15px; text-align: center;" src="img/Wicked.png">
+				<img class="logo fading" alt="CallMeWicked Logo" id="over-logo" style="text-align: center;" src="img/Wicked.png">
 		</div>
 
 				  
