--- a/spotify/answer.html
+++ b/spotify/answer.html
@@ -62,9 +62,8 @@
 						</div>
 					</nav>
 		</div>
-
 		<div class='body' id="main-overlay">
-			<img class="logo fading" alt="CallMeWicked Logo" id="over-logo" style="padding-left: 15px; text-align: center;" src="img/Wicked.png">
+			<img class="logo fading" alt="CallMeWicked Logo" id="over-logo" style="text-align: center;" src="img/Wicked.png">
 	</div>
 				  
 
