Update files with correct uri's

--- a/spotify/index.html
+++ b/spotify/index.html
@@ -9,8 +9,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta property="og:title" content="!Sigue al Grupo New Legend en Spotify!">
 		<meta property="og:description" content="!Sigue al Grupo New Legend en Spotify y manténte actualizado con todos nuestros nuevos lanzamientos!">
-		<meta property="og:image" content="https://blueit.cc/spotify/newlegend/img/NewLegend.jpg">
-		<meta property="og:url" content="https://blueit.cc/spotify/newlegend">
+		<meta property="og:image" content="https://blueit.cc/spotify/img/NewLegend.jpg">
+		<meta property="og:url" content="https://blueit.cc/spotify">
 		<meta property="og:site_name" content="!Sigue al Grupo New Legend en Spotify!">
 		<meta name="og:type" content="website">
 		<meta name="twitter:card" content="summary_large_image">
@@ -41,7 +41,7 @@
 						</div>
 
 						<div class="align-top text-center">
-							<a class="btn btn-white mb32" onclick="window.location='http://accounts.spotify.com/authorize?client_id=c7322d7d6d61465892cf334499b1bec2&redirect_uri=https:%2F%2Fblueit.cc%2Fspotify%2fnewlegend%2fanswer.html&scope=user-follow-modify%20playlist-modify-public%20user-follow-read%20user-library-modify&response_type=token&state=123'">Síguenos en spotify</a>
+							<a class="btn btn-white mb32" onclick="window.location='http://accounts.spotify.com/authorize?client_id=c7322d7d6d61465892cf334499b1bec2&redirect_uri=https:%2F%2Fblueit.cc%2Fspotify%2fanswer.html&scope=user-follow-modify%20playlist-modify-public%20user-follow-read%20user-library-modify&response_type=token&state=123'">Síguenos en spotify</a>
 						</div>
 						<div class="align-top text-center cast-shadow" style="top:85%;">
 							<img src="img/Spotify_Logo_RGB_Green.png" style="max-height: 40px;">
