Add Meta Tags for better optimization

--- a/index.html
+++ b/index.html
@@ -22,8 +22,17 @@
 		<meta name="msapplication-TileColor" content="#ffffff">
         <meta name="msapplication-TileImage" content="mstile-144x144.png">
         <meta name="theme-color" content="#ffffff">
-        <meta name="description" content="Building Leaders Up Everywhere in Technology (BlueiT) was established with the goals of providing technological services to businesses to help them achieve their highest potential and to provide mentorship to individuals looking to become a part of the tech industry."/>
+        <meta name="description" content="Building Leaders Up Everywhere in Technology (BlueiT) was established with the goals of providing technological services to businesses to help them achieve their highest potential and to provide mentorship to individuals looking to become a part of the tech industry.">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta property="og:title" content="BlueiT LLC - Building Leaders Up Everywhere In Technology.">
+	<meta property="og:description" content="Building Leaders Up Everywhere in Technology (BlueiT) was established with the goals of providing technological services to businesses to help them achieve their highest potential and to provide mentorship to individuals looking to become a part of the tech industry.">
+	<meta property="og:image" content="https://blueit.cc/img/LogoVector_NoShadow.png">
+	<meta property="og:url" content="https://blueit.cc">
+	<meta property="og:site_name" content="BlueiT LLC - Building Leaders Up Everywhere In Technology.">
+	<meta name="og:type" content="website">
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:site" content="@flix_photos">
+	<meta name="twitter:image:alt" content="BlueiT LLC Logomark">    
         <link href="css/themify-icons.css" rel="stylesheet" type="text/css" media="all" />
         <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
         <link href="css/flexslider.css" rel="stylesheet" type="text/css" media="all" />
@@ -337,8 +346,8 @@
         <script src="js/flexslider.min.js"></script>
         <script src="js/smooth-scroll.min.js"></script>
         <script src="js/parallax.js"></script>
-		<script src="js/scripts.js"></script>
-		<script src="js/spectragram.min.js"></script>
+	<script src="js/scripts.js"></script>
+	<script src="js/spectragram.min.js"></script>
     </body>
 </html>
 				
