--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		</script>
 
         <meta charset="utf-8">
-		<title>BlueiT LLC</title>
+		<title>BlueiT LLC | Building Leaders Up Everywhere In Technology</title>
 		<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
 		<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
         <link rel="manifest" href="site.webmanifest">
