--- a/manolo/middle.html
+++ b/manolo/middle.html
@@ -26,7 +26,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta property="og:title" content="Manolo - Middle School Basketball">
 		<meta property="og:description" content="Manolo - Middle School Basketball">
-		<meta property="og:image" content="https://blueit.cc/manolo/img/Thumbnail.png">
+		<meta property="og:image" content="https://blueit.cc/manolo/img/ThumbnailMid.png">
 		<meta property="og:url" content="https://blueit.cc/manolo/Middle.html">
 		<meta property="og:site_name" content="Manolo - Middle School Basketball">
 		<meta name="og:type" content="website">
