update thumbnail and og url

--- a/manolo/elementaryv.html
+++ b/manolo/elementaryv.html
@@ -26,8 +26,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta property="og:title" content="Manolo - Elementary School Volleyball">
 		<meta property="og:description" content="Manolo - Elementary School Volleyball">
-		<meta property="og:image" content="https://blueit.cc/manolo/img/Thumbnail.png">
-		<meta property="og:url" content="https://blueit.cc/manolo/elementary.html">
+		<meta property="og:image" content="https://blueit.cc/manolo/img/ThumbnailVol.png">
+		<meta property="og:url" content="https://blueit.cc/manolo/elementaryv.html">
 		<meta property="og:site_name" content="Manolo - Elementary School Volleyball">
 		<meta name="og:type" content="website">
 		<meta name="twitter:card" content="summary_large_image">
