--- a/manolo/middle.html
+++ b/manolo/middle.html
@@ -27,7 +27,7 @@
 		<meta property="og:title" content="Manolo - Middle School Basketball">
 		<meta property="og:description" content="Manolo - Middle School Basketball">
 		<meta property="og:image" content="https://blueit.cc/manolo/img/ThumbnailMid.png">
-		<meta property="og:url" content="https://blueit.cc/manolo/Middle.html">
+		<meta property="og:url" content="https://blueit.cc/manolo/middle.html">
 		<meta property="og:site_name" content="Manolo - Middle School Basketball">
 		<meta name="og:type" content="website">
 		<meta name="twitter:card" content="summary_large_image">
