--- a/manolo/elementaryvolley.html
+++ b/manolo/elementaryvolley.html
@@ -15,24 +15,24 @@
 
         <meta charset="utf-8">
         <title>Manolo - Elementary School Volleyball</title>
-		<link rel="apple-touch-icon" sizes="180x180" href="../apple-touch-icon.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="../favicon-32x32.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="../apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="../favicon-32x32.png">
         <link rel="manifest" href="../site.webmanifest">
-		<link rel="mask-icon" href="../safari-pinned-tab.svg" color="#5bbad5">
-		<meta name="msapplication-TileColor" content="#ffffff">
+	<link rel="mask-icon" href="../safari-pinned-tab.svg" color="#5bbad5">
+	<meta name="msapplication-TileColor" content="#ffffff">
         <meta name="msapplication-TileImage" content="../mstile-144x144.png">
         <meta name="theme-color" content="#ffffff">
         <meta name="description" content="Manolo - Elementary School Volleyball">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta property="og:title" content="Manolo - Elementary School Volleyball">
-		<meta property="og:description" content="Manolo - Elementary School Volleyball">
-		<meta property="og:image" content="https://blueit.cc/manolo/img/ThumbnailVol.png">
-		<meta property="og:url" content="https://blueit.cc/manolo/elementaryv.html">
-		<meta property="og:site_name" content="Manolo - Elementary School Volleyball">
-		<meta name="og:type" content="website">
-		<meta name="twitter:card" content="summary_large_image">
-		<meta name="twitter:site" content="@flix_photos">
-		<meta name="twitter:image:alt" content="Manolo - Elementary School Volleyball">   
+	<meta property="og:title" content="Manolo - Elementary School Volleyball">
+	<meta property="og:description" content="Manolo - Elementary School Volleyball">
+	<meta property="og:image" content="https://blueit.cc/manolo/img/ThumbnailVol.png">
+	<meta property="og:url" content="https://blueit.cc/manolo/elementaryvolley.html">
+	<meta property="og:site_name" content="Manolo - Elementary School Volleyball">
+	<meta name="og:type" content="website">
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:site" content="@flix_photos">
+	<meta name="twitter:image:alt" content="Manolo - Elementary School Volleyball">   
         <link href="css/themify-icons.css" rel="stylesheet" type="text/css" media="all" />
         <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
         <link href="css/flexslider.css" rel="stylesheet" type="text/css" media="all" />
