--- a/index.html
+++ b/index.html
@@ -277,6 +277,7 @@
 				    </p>
 		                </div>
 		                <div class="col-sm-6 col-md-5 col-md-offset-1">
+				    <a id="lead" class="in-page-link"></a>
 		                    <form action="https://formspree.io/felix.abreu@blueit.cc" method="POST" >
 		                        <input type="text" class="validate-required" name="name" placeholder="Your Name">
 		                        <input type="text" class="validate-required validate-email" name="email" placeholder="Email Address">
