add print button

--- a/rayaltree/index.html
+++ b/rayaltree/index.html
@@ -126,6 +126,7 @@
                                         
                                         <button id="clear-signature" class="btn btn-secondary">Reset Signature</button>
                                         <button id="screenshot-id" class="btn btn-secondary">Send Email</button>
+					<button class="btn btn-secondary" onclick="window.print()">Print Page</button>
                                     </div>
                                     <button type="submit" id="submit-form" class="btn btn-success btn-lg btn-block" style="margin-top: 50px; margin-bottom: 50px;">Submit</button>
                                   </div>
